welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:3: error: not found: value lookingFor
		if (lookingFor=value){
                    ^indexOfMaxValue:2: error: type mismatch;
 found   : Unit
 required: Int
	for(i<- 0 to nums.length-1){
             ^